--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -10,6 +10,8 @@ gem 'active_model_serializers'
 gem 'rails', '~> 6.1.1'
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3', '~> 1.4'
+# PostgreSQL gem
+gem 'pg'
 # Use Puma as the app server
 gem 'puma', '~> 5.0'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
