--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -6,6 +6,11 @@ ruby '2.6.1'
 gem 'httparty'
 gem 'active_model_serializers'
 
+# For Cloudinary CDN and Carrierwave integration
+gem 'carrierwave'
+gem 'cloudinary'
+
+
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 6.1.1'
 # Use sqlite3 as the database for Active Record
