--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -10,6 +10,8 @@ gem 'active_model_serializers'
 gem 'carrierwave'
 gem 'cloudinary'
 
+gem 'dotenv-rails'
+
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 6.1.1'
